<!--
  ~ Copyright (C)  2025 Kynetics, Inc.
  ~ SPDX-License-Identifier: Apache-2.0
  -->

<resources>
    <string name="app_name">Serial Handler</string>
    <string name="app_title">Kynetics Serial Handler Application</string>
    <string name="tab_text_1">Receiver</string>
    <string name="tab_text_2">Sender</string>
    <string name="data_acquisition">data acquisition</string>
    <string name="start">START</string>
    <string name="stop">STOP</string>
    <string name="data">DATA</string>
    <string name="baud_rate">BAUD RATe</string>
    <string name="port_configuration">PORT CONFIGURATION</string>
    <string name="select_baud_rate">SELECT BAUD RATE</string>
    <string name="selected_device">Selected device:</string>
    <string name="no_tty_devices_found">NO TTY DEVICES FOUND</string>
    <string name="serial_setup">SERIAL SETUP</string>
    <string name="select_tty_device">SELECT TTY DEVICE</string>
    <string name="baud_9600">9600</string>
    <string name="baud_38400">38400</string>
    <string name="baud_115200">115200</string>
    <string name="write_data_to_serial_port">WRITE DATA TO SERIAL PORT</string>
    <string name="insert_data">Insert data:</string>
    <string name="mode">MODE</string>
    <string name="rs_485">RS-485</string>
    <string name="send_btn">Send Data</string>

    <string name="menu_restart">restart</string>
    <string name="menu_about">About</string>
    <string name="about_text">Serial Android SDK extension example application \n\n
        This application serves as a reference implementation of Kynetics\' Serial Android SDK Extension library. \n\n

        To learn more about SDK Extension licensing please visit:\n
        <a href="https://www.kynetics.com/android-sdk-extensions">https://www.kynetics.com/android-sdk-extensions</a>\n\n

        Application source code is available under Apache v2.0 licence at:\n
        <a href="https://github.com/Kynetics/android-serial-example-app">https://github.com/Kynetics/android-can-example-app</a>\n\n

    </string>
    <string name="about_copyright">Copyright © 2025  Kynetics, Inc.</string>
    <string name="about_app_version">App version: %s</string>
</resources>
