<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C)  2025 Kynetics, Inc.
  ~ SPDX-License-Identifier: Apache-2.0
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:fillViewport="true"
    android:scrollbarStyle="insideInset"
    android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp">


        <TextView
            android:id="@+id/textView_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:text="@string/serial_setup"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp" />

        <TextView
            android:id="@+id/textView_configDevTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:text="@string/select_tty_device"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

        <Spinner
            android:id="@+id/spinner_ttyDevs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView_configBaudTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:text="@string/select_baud_rate"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

        <RadioGroup
            android:id="@+id/radioGroup_baudRate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <RadioButton
                android:id="@+id/radioButton_9600"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/baud_9600"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/radioButton_38400"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/baud_38400" />

            <RadioButton
                android:id="@+id/radioButton_115200"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/baud_115200" />
        </RadioGroup>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:id="@+id/textView_configRS485"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:text="@string/mode"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

        <CheckBox
            android:id="@+id/checkBox_RS485"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rs_485" />
    </LinearLayout>
</ScrollView>
