<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C)  2025 Kynetics, Inc.
  ~ SPDX-License-Identifier: Apache-2.0
  -->

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.ReceiverFragment"
    android:theme="@style/Theme.MaterialComponents.DayNight.NoActionBar">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:fillViewport="true"
        android:scrollbarStyle="insideInset"
        android:scrollbars="vertical">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardview_row1_col1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="5dp"
                    app:contentPadding="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView_acquisitionTitle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingBottom="5dp"
                            android:text="@string/data_acquisition"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                        <ProgressBar
                            android:id="@+id/progressBar_acquisition"
                            style="?android:attr/progressBarStyleHorizontal"
                            android:layout_width="match_parent"
                            android:layout_height="20dp"
                            android:indeterminateOnly="true"
                            android:visibility="invisible" />

                        <ToggleButton
                            android:id="@+id/toggleButton_acquisition"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/ic_round_button"
                            android:textOff="@string/start"
                            android:textOn="@string/stop" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardview_row1_col2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="5dp"
                    app:contentPadding="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">


                        <TextView
                            android:id="@+id/textView_configTitle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingBottom="5dp"
                            android:text="@string/port_configuration"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                        <View
                            android:id="@+id/divider1"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="?android:attr/listDivider" />

                        <TextView
                            android:id="@+id/textView_configDevName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingBottom="5dp"
                            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                        <TextView
                            android:id="@+id/textView_configDevBaud"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingBottom="5dp"
                            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                        <TextView
                            android:id="@+id/textView_configDevParity"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingBottom="5dp"
                            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                        <TextView
                            android:id="@+id/textView_configDevDataBits"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingBottom="5dp"
                            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                        <TextView
                            android:id="@+id/textView_configRS485"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingBottom="5dp"
                            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </TableRow>

            <TableRow
                android:layout_height="0dp"
                android:layout_weight="1">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardview_row2_col1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="5dp"
                    app:contentPadding="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView_sendTitle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingBottom="5dp"
                            android:text="@string/data"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
                        <View
                            android:id="@+id/divider2"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="?android:attr/listDivider" />

                        <ScrollView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:fillViewport="true"
                            android:scrollbars = "vertical"
                            android:scrollbarStyle="insideInset">

                            <TextView
                                android:id="@+id/textView_messages"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent" />
                        </ScrollView>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </TableRow>
        </TableLayout>
    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>